[project]
name = "resume_match_crew"
version = "0.1.0"
description = "resume_match_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
resume_match_crew = "resume_match_crew.main:run"
run_crew = "resume_match_crew.main:run"
train = "resume_match_crew.main:train"
replay = "resume_match_crew.main:replay"
test = "resume_match_crew.main:test"
run_with_trigger = "resume_match_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
